centered layout succes.html and finally fixed the navbar on smaller screens

--- a/static/styles.css
+++ b/static/styles.css
@@ -51,6 +51,7 @@ nav .logo
 main
 {
     background-color: #231e1e;
+    min-height: 100vh;
 }
 .patroon
 {
